--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,4 @@
 # These are supported funding model platforms
 
-github: ['https://github.com/sponsors/CodeXBotz']
+github: ["https://github.com/sponsors/CodeXBotz"]
+# C:\Users\mukes\Downloads\File-Sharing-Bot\plugins\channel_post.py
